Fix logo alignment

--- a/client/scss/components/_logo.scss
+++ b/client/scss/components/_logo.scss
@@ -77,6 +77,7 @@
     height: 100px;
     background-color: #555;
     border-radius: 50%;
+    margin: 0 auto;
 
     .page404__bg & {
         background-color: transparent;
